# Work

Daily Note/: 2026-05-17.md
Scripts/: sync-github.sh
gnc/: sum.cpp
gnc/fireball_sim/: CMakeLists.txt  package.xml
gnc/fireball_sim/include/fireball_sim/: physics_rk4.hpp  quaternion.hpp
gnc/fireball_sim/launch/: fireball.launch.py
gnc/fireball_sim/src/: physics_rk4.cpp  physics_rk4_node.cpp  quaternion.cpp  quaternion_node.cpp  visualization_node.cpp
gnc/fireball_sim/urdf/: fireball_initialization.urdf
scripts/: crun.sh  cruncpp.sh  ros_start.sh  rviz.sh  sync-github.sh
